--- a/list_customer.html
+++ b/list_customer.html
@@ -53,23 +53,242 @@
 <main class="overflow-hidden position-relative vh-100">
     <div class="section-body position-absolute top-0 start-0 w-100 h-100 overflow-hidden">
         <div class="container h-100">
-            <div class="page-customer hstack justify-content-start flex-column position-relative">
-                <div class="d-flex align-items-center gap-2">
+            <div class="page-customer hstack justify-content-start flex-column position-relative pb-1 h-100 overflow-hidden">
+                <div class="page-customer__header d-flex align-items-center gap-2 w-100">
                     <div class="form-search position-relative overflow-hidden">
                         <div class="form-search__icon position-absolute top-0 start-0 h-100 d-flex align-items-center justify-content-center">
-                            <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M24.7875 24.7353L32 32M28.6667 15.3333C28.6667 22.6972 22.6972 28.6667 15.3333 28.6667C7.96953 28.6667 2 22.6972 2 15.3333C2 7.96953 7.96953 2 15.3333 2C22.6972 2 28.6667 7.96953 28.6667 15.3333Z" stroke="#B0B2BB" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                            <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M24.7875 24.7353L32 32M28.6667 15.3333C28.6667 22.6972 22.6972 28.6667 15.3333 28.6667C7.96953 28.6667 2 22.6972 2 15.3333C2 7.96953 7.96953 2 15.3333 2C22.6972 2 28.6667 7.96953 28.6667 15.3333Z"
+                                      stroke="#B0B2BB" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </div>
-                        <input type="text" class="form-control text-gray bg-white" placeholder="Search name">
+                        <input type="text" class="form-control bg-white" placeholder="Search name">
                     </div>
-                    <div class="form-search position-relative overflow-hidden">
-                        <div class="form-search__icon position-absolute top-0 start-0 h-100 d-flex align-items-center justify-content-center">
-                            <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M24.7875 24.7353L32 32M28.6667 15.3333C28.6667 22.6972 22.6972 28.6667 15.3333 28.6667C7.96953 28.6667 2 22.6972 2 15.3333C2 7.96953 7.96953 2 15.3333 2C22.6972 2 28.6667 7.96953 28.6667 15.3333Z" stroke="#B0B2BB" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
+                    <div class="search-select bg-white position-relative">
+                        <div class="d-flex align-items-center justify-content-between gap-2 h-100">
+                            <div class="title text-gray">
+                                Sort
+                            </div>
+                            <div class="icon">
+                                <svg width="21" height="13" viewBox="0 0 21 13" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M10.5391 12.5586C10.1289 12.5586 9.77734 12.4062 9.46094 12.0781L0.542968 2.96094C0.285156 2.70312 0.144531 2.375 0.144531 1.98828C0.144531 1.21484 0.753906 0.59375 1.53906 0.59375C1.91406 0.59375 2.26562 0.757812 2.53516 1.01562L10.5391 9.23047L18.543 1.01562C18.8125 0.757812 19.1523 0.593749 19.5391 0.593749C20.3242 0.593749 20.9336 1.21484 20.9336 1.98828C20.9336 2.375 20.793 2.70312 20.5352 2.96094L11.6055 12.0781C11.3008 12.4062 10.9492 12.5586 10.5391 12.5586Z"
+                                          fill="black"/>
+                                </svg>
+                            </div>
                         </div>
-                        <input type="text" class="form-control text-gray bg-white" placeholder="Search name">
+                        <ul class="mb-0 list-unstyled transition-default position-absolute top-100 end-0 bg-white zi-2">
+                            <li>
+                                Demo text 1
+                            </li>
+                            <li>
+                                Demo text 1 Demo text 1 Demo text 1
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="page-customer__body d-flex flex-column gap-2 w-100 mt-3">
+                    <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
+                        <div class="customer-item__name">
+                            Baddie
+                        </div>
+                        <div class="customer-item__body d-flex align-items-center justify-content-end">
+                            <div class="customer-item__phone d-flex align-items-center gap-md-2 gap-1">
+                                <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/phone.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Phone">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                    +84 34455345345
+                                </span>
+                            </div>
+                            <div class="customer-item__date d-flex align-items-center gap-md-2 gap-1 border-start ps-md-3 ms-md-3 ps-2 ms-2">
+                                 <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/clock.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Date">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                   22/06/2024
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
+                        <div class="customer-item__name">
+                            Baddie Baddie Baddie Baddie
+                        </div>
+                        <div class="customer-item__body d-flex align-items-center justify-content-end">
+                            <div class="customer-item__phone d-flex align-items-center gap-md-2 gap-1">
+                                <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/phone.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Phone">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                    +84 34455345345
+                                </span>
+                            </div>
+                            <div class="customer-item__date d-flex align-items-center gap-md-2 gap-1 border-start ps-md-3 ms-md-3 ps-2 ms-2">
+                                 <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/clock.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Date">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                   22/06/2024
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
+                        <div class="customer-item__name">
+                            Baddie
+                        </div>
+                        <div class="customer-item__body d-flex align-items-center justify-content-end">
+                            <div class="customer-item__phone d-flex align-items-center gap-md-2 gap-1">
+                                <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/phone.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Phone">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                    +84 34455345345
+                                </span>
+                            </div>
+                            <div class="customer-item__date d-flex align-items-center gap-md-2 gap-1 border-start ps-md-3 ms-md-3 ps-2 ms-2">
+                                 <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/clock.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Date">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                   22/06/2024
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
+                        <div class="customer-item__name">
+                            Baddie Baddie Baddie Baddie
+                        </div>
+                        <div class="customer-item__body d-flex align-items-center justify-content-end">
+                            <div class="customer-item__phone d-flex align-items-center gap-md-2 gap-1">
+                                <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/phone.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Phone">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                    +84 34455345345
+                                </span>
+                            </div>
+                            <div class="customer-item__date d-flex align-items-center gap-md-2 gap-1 border-start ps-md-3 ms-md-3 ps-2 ms-2">
+                                 <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/clock.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Date">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                   22/06/2024
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
+                        <div class="customer-item__name">
+                            Baddie
+                        </div>
+                        <div class="customer-item__body d-flex align-items-center justify-content-end">
+                            <div class="customer-item__phone d-flex align-items-center gap-md-2 gap-1">
+                                <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/phone.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Phone">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                    +84 34455345345
+                                </span>
+                            </div>
+                            <div class="customer-item__date d-flex align-items-center gap-md-2 gap-1 border-start ps-md-3 ms-md-3 ps-2 ms-2">
+                                 <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/clock.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Date">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                   22/06/2024
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
+                        <div class="customer-item__name">
+                            Baddie Baddie Baddie Baddie
+                        </div>
+                        <div class="customer-item__body d-flex align-items-center justify-content-end">
+                            <div class="customer-item__phone d-flex align-items-center gap-md-2 gap-1">
+                                <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/phone.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Phone">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                    +84 34455345345
+                                </span>
+                            </div>
+                            <div class="customer-item__date d-flex align-items-center gap-md-2 gap-1 border-start ps-md-3 ms-md-3 ps-2 ms-2">
+                                 <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/clock.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Date">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                   22/06/2024
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
+                        <div class="customer-item__name">
+                            Baddie
+                        </div>
+                        <div class="customer-item__body d-flex align-items-center justify-content-end">
+                            <div class="customer-item__phone d-flex align-items-center gap-md-2 gap-1">
+                                <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/phone.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Phone">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                    +84 34455345345
+                                </span>
+                            </div>
+                            <div class="customer-item__date d-flex align-items-center gap-md-2 gap-1 border-start ps-md-3 ms-md-3 ps-2 ms-2">
+                                 <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/clock.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Date">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                   22/06/2024
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="customer-item bg-white d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-between gap-1">
+                        <div class="customer-item__name">
+                            Baddie Baddie Baddie Baddie
+                        </div>
+                        <div class="customer-item__body d-flex align-items-center justify-content-end">
+                            <div class="customer-item__phone d-flex align-items-center gap-md-2 gap-1">
+                                <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/phone.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Phone">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                    +84 34455345345
+                                </span>
+                            </div>
+                            <div class="customer-item__date d-flex align-items-center gap-md-2 gap-1 border-start ps-md-3 ms-md-3 ps-2 ms-2">
+                                 <span class="customer-item__image flex-shrink-0">
+                                    <img src="assets/images/clock.png" class="w-100 h-100 object-fit-contain" width="37"
+                                         height="37" alt="Date">
+                                </span>
+                                <span class="customer-item__text text-gray fw-400 text-nowrap">
+                                   22/06/2024
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
